--- a/index.html
+++ b/index.html
@@ -3,18 +3,54 @@
 
 <head>
     <title>monthlyHeat</title>
-    <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="https://d3js.org/d3-color"></script>
-    <script src="https://d3js.org/d3-time-format"></script>
-
 </head>
+<style>
+    .d3-tip {
+        line-height: 1;
+        font-weight: bold;
+        padding: 12px;
+        background: rgba(0, 0, 0, 0.8);
+        color: #fff;
+        border-radius: 2px;
+    }
+
+    /* Creates a small triangle extender for the tooltip */
+    .d3-tip:after {
+        box-sizing: border-box;
+        display: inline;
+        font-size: 10px;
+        width: 100%;
+        line-height: 1;
+        color: rgba(0, 0, 0, 0.8);
+        content: "\25BC";
+        position: absolute;
+        text-align: center;
+    }
+
+    /* Style northward tooltips differently */
+    .d3-tip.n:after {
+        margin: -1px 0 0 0;
+        top: 100%;
+        left: 0;
+    }
+</style>
 
 <body>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://unpkg.com/d3-v6-tip@1.0.6/build/d3-v6-tip.js"></script>
+    <script src="https://d3js.org/d3-color"></script>
+    <script src="https://d3js.org/d3-time-format"></script>
     <csv src="data\temperature_daily.csv">
         <h1>Month Heat Map of Hongkong</h1>
         <svg width="1200" height="800" id="mainsvg" class="svgs"></svg>
-        <script>
 
+        <script>
+            const tip = d3.tip()
+                .attr('class', 'd3-tip')
+                .offset([-10, 0])
+                .html(function (event, d) {
+                    return "date:" + d.monthDate + " max:" + d.max + " min:" + d.min;
+                })
             var parseTime = d3.timeParse("%Y-%m-%d");
             var formatYear = d3.timeFormat("%Y");
             var formatMonth = d3.timeFormat("%B");
@@ -28,6 +64,8 @@
             const margin = { top: 70, right: 150, bottom: 60, left: 150 };
             const innerWidth = width - margin.left - margin.right;
             const innerHeight = height - margin.top - margin.bottom;
+
+            svg.call(tip);
 
             const g = svg.append('g').attr('id', 'maingroup')
                 .attr('transform', `translate(${margin.left}, ${margin.top})`);
@@ -49,6 +87,7 @@
                     .attr('y', `${i * 20}`)
                     .attr('font-size', '12px')
                     .attr('fill', 'black')
+
             }
 
             const renderinit = function (data) {
@@ -71,11 +110,14 @@
                         var groupData = data.filter(datum => (+datum.year === i && +datum.monthNum === j));
                         // console.log(groupData);
                         if (groupData.length !== 0) {
-                            var monthData = [{ monthDate: groupData[0].yearMonth, month: groupData[0].month, max: d3.max(groupData, datum => +datum.max_temperature), year: groupData[0].year }]
+                            var monthData = [{
+                                monthDate: groupData[0].yearMonth, month: groupData[0].month, max: d3.max(groupData, datum => +datum.max_temperature), year: groupData[0].year,
+                                min: d3.max(groupData, datum => +datum.min_temperature)
+                            }]
 
-                                g
+                            g
                                 .append('rect')
-                                .attr('class','maxGroup')
+                                .attr('class', 'maxGroup')
                                 .data(monthData)
                                 .attr('id', `rect${(j - 1) * 10 + (i - 2007)}`)
                                 .attr('x', d => xScale(d.year))
@@ -85,17 +127,21 @@
                                 .attr('fill', d3.hsl(zScale(d3.max(groupData, datum => +datum.max_temperature)), 0.9, 0.5))
                                 .attr('opacity', '0.8')
 
-                                g
+                            g
                                 .append('rect')
-                                .attr('class','minGroup')
+                                .attr('class', 'minGroup')
                                 .data(monthData)
-                                .attr('id', `rect${(j - 1) * 10 + (i - 2007)+200}`)
+                                .attr('id', `rect${(j - 1) * 10 + (i - 2007) + 200}`)
                                 .attr('x', d => xScale(d.year))
                                 .attr('y', d => yScale(d.month))
+                                .on('mouseover', (event, d) => {
+                                    tip.show(event, d);
+                                }).on('mouseout', tip.hide)
                                 .attr('width', xScale.bandwidth())
                                 .attr('height', yScale.bandwidth())
                                 .attr('fill', d3.hsl(zScale(d3.max(groupData, datum => +datum.min_temperature)), 0.9, 0.5))
                                 .attr('opacity', '0')
+
 
                             var g0 = g.append('g').attr('id', `gName${(j - 1) * 10 + (i - 2007)}`).data(monthData)
                                 .attr('transform', `translate(${xScale(groupData[0].year)}, ${yScale(groupData[0].month)})`);
@@ -132,20 +178,6 @@
                                 .attr("stroke-linejoin", "round")
                                 .attr("stroke-linecap", "round")
                                 .attr("d", line1)
-                                .on('mouseover', function (d, i) {
-                                    d3.select(d.path['1']).append('text').attr("id", "tooltip")
-                                        .text(function (d) {
-                                            return "date:" + d.monthDate + "max:" + d.max;
-                                        })
-                                        .attr('x', '0')
-                                        .attr('y', '0')
-                                        .attr('font-size', '12px')
-                                        .attr('fill', 'black')
-
-                                })
-                                .on('mouseout', function (d) {
-                                    d3.select("#tooltip").remove();
-                                });
 
                             g0.append("path")
                                 .datum(groupData)
@@ -195,14 +227,15 @@
             })
 
             d3.select('#maingroup')
-            .on('click',function(d,i){
-                
-                
-                d3.selectAll('.minGroup').attr('opacity','0.8');
-                d3.selectAll('.maxGroup').attr('opacity','0');
+                .on('click', function (d, i) {
+                    d3.selectAll('.minGroup').attr('opacity', '0.8');
+                    d3.selectAll('.maxGroup').attr('opacity', '0');
+                })
 
+            d3.selectAll('.minGroup').on('click', function (d) {
+                console.log('over');
+                console.log(this.opacity);
             })
-
         </script>
 </body>
 
